# predictions

./: .pre-commit-config.yaml  mypy.ini  pyproject.toml
backend/: database.py  main.py
backend/core/: base_object.py  config.py  logger.py
backend/models/: token.py  user.py
backend/routes/: admin.py  auth.py
backend/services/: authentication.py
devdata/: result.json
tests/services/: authentication_test.py
